Update 'moozi lyrics' title to golden yellow color
- Applied accent color (#ebb528) to the header title
- Title now displays in golden yellow instead of white

--- a/side-panel/index.html
+++ b/side-panel/index.html
@@ -11,7 +11,7 @@
     <header class="moozi-header">
       <div class="logo-container">
         <img src="../icons/icon-48.png" alt="Moozi Lyrics" class="logo">
-        <h1>Moozi Lyrics</h1>
+        <h1>moozi lyrics</h1>
       </div>
       
       <div class="header-controls">
